fix: fix some letter spacing

--- a/singolo3.css
+++ b/singolo3.css
@@ -111,7 +111,6 @@
   color: #f0d8d9;
   font-family: 'Lato regular', sans-serif;
   font-size: 1.2rem;
-  letter-spacing: -0.2px;
 }
 
 .footer {
